Small improvements in web files

--- a/examples/template/gui.html
+++ b/examples/template/gui.html
@@ -5,6 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="stylesheet" href="gui.css"/>
 		<title>My GUI</title>
+		<script src="mymfd.js" defer></script>
+		<script src="gui.js" defer></script>
 	</head>
 	<body>
 		<main>
@@ -14,6 +16,5 @@
 			<button type="button" data-type="button" data-vjoy="1" data-number="2">2</button>
 			<input type="range" data-type="axis" data-vjoy="1" data-number="1"/>
 		</main>
-		<script src="gui.js"></script>
 	</body>
 </html>
